=== git era Changelog ===

Please note that the git era changelog isn't complete regarding internal adjustments.
Only things that are major architecture change or might break compatibility with MediaWiki
versions and other extensions is collected here.

; TBC: v2.6.0, by MGChecker and …
* Fix further template caching issues
** Template caching could mess up resetting Variables via repeated template calls.
   This won't happen anymore, as the parser frame is marked as volatile by the extension.
** This new behavior can be deactivated by setting '$egVariablesAreVolatile' to false,
   however be aware that this is a temporary option for transition and will be removed in
   the future.

; 2019-07-11: v2.5.2, by MGChecker
* Removal of PHP entry point, use wfLoadExtension( 'Variables' ) instead

; 2019-03-09: v2.5.1, by MGChecker
* Moving hook functions to separate VariablesHooks class (T202412)
* Moving code files into includes/ directory
* Renaming files to match class name

; 2018-08-30: v2.5.0, by MGChecker
* Fix '#varexists' parsing (T202679)
** if and else value are no longer expanded if not needed, thus variable definitions can be
   done conditionally and making the parser faster

; 2018-08-24: v2.4.1, by MGChecker
* Class attributes of ExtVariables changed to private, as it has been annotated before.

; 2018-04-20: v2.4.0, by MGChecker
* Fix longstanding template caching issues (T191574)
** Template caching could mess up definition of Variables depending on other Variables in
   templates, if they are called multiple times. This won't happen anymore, as the parser
   frame is marked as volatile by the extension.
** This new behavior can be deactivated by setting '$egVariablesAreVolatile' to false,
   however be aware that this is a temporary option for transition and will be removed in
   the future.

; 2018-01-23: v2.3.0 by MGChecker
* Conversion to Extension registration (T173625)
* ExtVariables::VERSION is deprecated, use Extension registration instead [1]