@@ -1,6 +1,6 @@
 {
 	"name": "Variables",
-	"version": "2.5.1",
+	"version": "2.6.0-beta",
 	"author": [
 		"Rob Adams",
 		"Tom Hempel",
@@ -33,8 +33,7 @@
 	},
 	"Hooks": {
 		"ParserFirstCallInit": "VariablesHooks::onParserFirstCallInit",
-		"ParserClearState": "VariablesHooks::onParserClearState",
-		"InternalParseBeforeSanitize": "VariablesHooks::onInternalParseBeforeSanitize"
+		"ParserClearState": "VariablesHooks::onParserClearState"
 	},
 	"MessagesDirs": {
 		"Variables": [
